In machine_learning_template.ipynb > Data Preprocessing > Handling Outliers > Remove with 1.5 IQR Method section: Update code to handle both single and multiple columns and rename section to 1.5 IQR Method

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -916,8 +916,8 @@
    "id": "3a030d86-a4da-4b67-bd83-11dcc2af33ec",
    "metadata": {},
    "source": [
-    "### Remove with 1.5 IQR Method  \n",
-    "Remove univariate outliers from a numerical column using the 1.5 interquartile range (IQR) rule. Specifically, a data point is considered an outlier if it falls more than 1.5 interquartile ranges above the third quartile (Q3) or below the first quartile (Q1) of the column.  "
+    "### 1.5 IQR Method  \n",
+    "Identify and remove univariate outliers in numerical columns using the 1.5 interquartile range (IQR) rule. Specifically, a data point is considered an outlier if it falls more than 1.5 interquartile ranges above the third quartile (Q3) or below the first quartile (Q1) of the column.  "
    ]
   },
   {
@@ -927,33 +927,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a custom transformer class to remove outliers using the 1.5 IQR method\n",
+    "# Create a custom transformer class to identify and remove outliers using the 1.5 IQR method\n",
     "class OutlierRemoverIQR(BaseEstimator, TransformerMixin):\n",
-    "    def fit(self, df, numerical_column):\n",
-    "        # Calculate quartiles, IQR and cutoff values \n",
-    "        Q1 = df[numerical_column].quantile(0.25)\n",
-    "        Q3 = df[numerical_column].quantile(0.75)\n",
-    "        IQR = Q3 - Q1\n",
-    "        self.lower_cutoff_ = Q1 - 1.5 * IQR\n",
-    "        self.upper_cutoff_ = Q3 + 1.5 * IQR\n",
+    "    def fit(self, df, numerical_columns):\n",
+    "        # Convert single column string to list\n",
+    "        if isinstance(numerical_columns, str):\n",
+    "            numerical_columns = [numerical_columns]\n",
+    "        \n",
+    "        # Calculate statistics (first quartile, third quartile, interquartile range, cutoff values) for each column\n",
+    "        self.stats_ = pd.DataFrame(index=numerical_columns)\n",
+    "        self.stats_[\"Q1\"] = df[numerical_columns].quantile(0.25)\n",
+    "        self.stats_[\"Q3\"] = df[numerical_columns].quantile(0.75)\n",
+    "        self.stats_[\"IQR\"] = self.stats_[\"Q3\"] - self.stats_[\"Q1\"]\n",
+    "        self.stats_[\"lower_cutoff\"] = self.stats_[\"Q1\"] - 1.5 * self.stats_[\"IQR\"]\n",
+    "        self.stats_[\"upper_cutoff\"] = self.stats_[\"Q3\"] + 1.5 * self.stats_[\"IQR\"]\n",
     "\n",
-    "        # Create a mask for filtering outliers\n",
-    "        self.mask_ = (df[numerical_column] >= self.lower_cutoff_) & (df[numerical_column] <= self.upper_cutoff_)\n",
-    "  \n",
-    "        # Show cutoff values and number of outliers\n",
-    "        print(f\"Lower cutoff for {numerical_column}: {self.lower_cutoff_}\")\n",
-    "        print(f\"Upper cutoff for {numerical_column}: {self.upper_cutoff_}\")\n",
-    "        print(f\"{df.shape[0] - df[self.mask_].shape[0]} outliers removed based on {numerical_column} using the 1.5 IQR method.\")\n",
+    "        # Create masks for filtering outliers \n",
+    "        self.masks_ = (df[numerical_columns] >= self.stats_[\"lower_cutoff\"]) & (df[numerical_columns] <= self.stats_[\"upper_cutoff\"])  # masks by column\n",
+    "        self.final_mask_ = self.masks_.all(axis=1)  # single mask across all columns\n",
+    "\n",
+    "        # Calculate number of outliers\n",
+    "        self.stats_[\"outliers\"] = (~self.masks_).sum()  # by column\n",
+    "        self.outliers_ = (~self.final_mask_).sum()  # across all columns\n",
+    "               \n",
+    "        # Show statistics and number of outliers\n",
+    "        print(f\"Statistics and outliers: \\n{self.stats_}\")\n",
+    "        if len(numerical_columns) == 1:\n",
+    "            print(f\"\\n{self.outliers_} rows contain outliers in the '{numerical_columns[0]}' column.\")\n",
+    "        else:\n",
+    "            print(f\"\\n{self.outliers_} rows contain outliers in one or more numerical columns.\")\n",
     "        \n",
     "        return self\n",
     "\n",
     "    def transform(self, df):\n",
-    "        # Remove outliers based on the mask \n",
-    "        return df[self.mask_]\n",
+    "        # Remove outliers based on the final mask\n",
+    "        print(f\"{self.outliers_} rows with outliers removed.\")\n",
+    "        return df[self.final_mask_]\n",
     "\n",
-    "    def fit_transform(self, df, numerical_column):\n",
+    "    def fit_transform(self, df, numerical_columns):\n",
     "        # Perform both fit and transform\n",
-    "        return self.fit(df, numerical_column).transform(df)"
+    "        return self.fit(df, numerical_columns).transform(df)"
    ]
   },
   {
@@ -966,8 +979,8 @@
     "# Initialize outlier remover \n",
     "outlier_remover_iqr = OutlierRemoverIQR()\n",
     "\n",
-    "# Remove outliers\n",
-    "df = outlier_remover_iqr.fit_transform(df, \"numerical_column\")"
+    "# Identify and remove outliers\n",
+    "df = outlier_remover_iqr.fit_transform(df, numerical_columns)"
    ]
   },
   {
