In machine_learning_template.ipynb > Data Preprocessing > Handling Outliers section: Add section for Isolation Forest to handle multivariate outliers

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -985,6 +985,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0faa22ef-8cb3-4db1-9757-faef72f78355",
+   "metadata": {},
+   "source": [
+    "### Isolation Forest\n",
+    "Identify and remove multivariate outliers using the isolation forest algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9725328d-f457-45b2-9aeb-8f82feb2206f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize isolation forest\n",
+    "isolation_forest = IsolationForest(contamination=0.05, random_state=42)\n",
+    "\n",
+    "# Define columns to use: All numerical and boolean features \n",
+    "numerical_boolean_features = numerical_columns + boolean_columns  # Remove the target variable if necessary\n",
+    "\n",
+    "# Fit isolation forest\n",
+    "isolation_forest.fit(df[numerical_boolean_features])\n",
+    "\n",
+    "# Predict outliers\n",
+    "df[\"outlier\"] = isolation_forest.predict(df[numerical_boolean_features])\n",
+    "df[\"outlier_score\"] = isolation_forest.decision_function(df[numerical_boolean_features])\n",
+    "\n",
+    "# Show number of outliers\n",
+    "n_outliers = df[\"outlier\"].value_counts()[-1]\n",
+    "contamination = df[\"outlier\"].value_counts()[-1] / df_train[\"outlier\"].value_counts().sum()\n",
+    "print(f\"{n_outliers} rows ({100 * contamination:.1f}%) were identified as multivariate outliers.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "63d48183-607c-4d2b-a462-7d22b0ee0fc4",
    "metadata": {},
    "source": [
