In machine_learning_template.ipynb > Data Preprocessing > Handling Outliers > Isolation Forest section: Add scatter plot matrix to visualize outliers and code to remove outliers

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1019,6 +1019,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2798b5c-f489-4f07-8e5f-f2cd88dd5e85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatter plot matrix to visualize outliers\n",
+    "df_subsample = df[numerical_boolean_features + [\"outlier\"]].sample(n=5000, random_state=42)\n",
+    "sns.pairplot(df_subsample, hue=\"outlier\", palette={1: \"#4F81BD\", -1: \"#D32F2F\"}, plot_kws={\"alpha\":0.6, \"s\":40})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4506ce8b-9351-4d40-a45a-90a80681b7e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove outliers\n",
+    "df = df[df[\"outlier\"] == 1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "63d48183-607c-4d2b-a462-7d22b0ee0fc4",
    "metadata": {},
