In machine_learning_template.ipynb > Data Preprocessing section: Move Defining Semantic Type section after Feature extraction

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -445,14 +445,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd4abe24-5ad8-45ad-9723-504da71afcac",
-   "metadata": {},
-   "source": [
-    "### Storage Type"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "40cb6e08-4ce6-475c-a850-af4938b740f6",
    "metadata": {},
    "source": [
@@ -520,70 +512,6 @@
    "source": [
     "# Convert column from object to boolean\n",
     "df[\"bool_column\"] = df[\"object_column\"].map({\"category_1\": True, \"category_2\": False})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c07551e9-a294-4613-b0be-a39344705a35",
-   "metadata": {},
-   "source": [
-    "### Semantic Type  \n",
-    "Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "faa92ad5-95b0-4305-b135-2d13b639a952",
-   "metadata": {},
-   "source": [
-    "#### Manual  \n",
-    "Option 1: Define semantic column types manually for small datasets or when you have specific requirements and need precise control."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa784e26-d252-4266-aa76-bbfb1f028f07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Identify storage data types\n",
-    "df.dtypes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e4452cb-b80a-4384-9c2a-6fb4a5af21e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define semantic column types manually\n",
-    "numerical_columns = [\"numerical_column_1\", \"numerical_column_2\", \"numerical_column_3\"]\n",
-    "categorical_columns = [\"categorical_column_1\", \"categorical_column_2\", \"categorical_column_3\"]\n",
-    "boolean_columns = [\"boolean_column_1\", \"boolean_column_2\", \"boolean_column_3\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d724833f-6e94-4657-8b03-3897853504e4",
-   "metadata": {},
-   "source": [
-    "#### Programmatic  \n",
-    "Option 2: Define semantic column types programmatically for large datasets or when you need to automate the process, ensuring efficiency and scalability."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2677b80d-6a5a-4cd0-9028-8c9710c78977",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define semantic column types programmatically based on storage data types\n",
-    "numerical_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
-    "categorical_columns = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
-    "boolean_columns = df.select_dtypes(include=[\"bool\"]).columns.tolist()"
    ]
   },
   {
@@ -691,6 +619,70 @@
     "\n",
     "# Show frequencies of boolean feature\n",
     "print(df[\"boolean_feature\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416056c2-ce84-4a88-902e-42ac63b4b96b",
+   "metadata": {},
+   "source": [
+    "## Defining Semantic Type\n",
+    "Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6266e9b3-4b24-41e6-bd6d-b883f051ab6d",
+   "metadata": {},
+   "source": [
+    "### Manual  \n",
+    "Option 1: Define semantic column types manually for small datasets or when you have specific requirements and need precise control."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6925e70a-c6c1-4c77-b1e3-c598ed772021",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify storage data types\n",
+    "df.dtypes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "026f22c0-b7bf-42f6-97e3-aefbcd9a05ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define semantic column types manually\n",
+    "numerical_columns = [\"numerical_column_1\", \"numerical_column_2\", \"numerical_column_3\"]\n",
+    "categorical_columns = [\"categorical_column_1\", \"categorical_column_2\", \"categorical_column_3\"]\n",
+    "boolean_columns = [\"boolean_column_1\", \"boolean_column_2\", \"boolean_column_3\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52666e48-c4da-4f3d-ae3d-46329239f669",
+   "metadata": {},
+   "source": [
+    "### Programmatic  \n",
+    "Option 2: Define semantic column types programmatically for large datasets or when you need to automate the process, ensuring efficiency and scalability."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e4574d0-883f-4adf-97db-c835ad3a2743",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define semantic column types programmatically based on storage data types\n",
+    "numerical_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
+    "categorical_columns = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "boolean_columns = df.select_dtypes(include=[\"bool\"]).columns.tolist()"
    ]
   },
   {
