In machine_learning_template.ipynb, combine Data Loading and Initial Data Inspection sections

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -198,7 +198,7 @@
    "id": "2c93f5c7-8968-4a0e-907f-a6bc60d0dd3d",
    "metadata": {},
    "source": [
-    "# Data Loading"
+    "# Data Loading and Inspection"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "id": "52d7809f-dd55-4350-a52d-7c20c761a102",
    "metadata": {},
    "source": [
-    "# Initial Data Inspection  \n",
+    "## Initial Data Inspection  \n",
     "Basic exploration of the dataset to understand its structure and detect obvious issues."
    ]
   },
