In machine_learning_template.ipynb > Data Preprocessing > Handling Column Names section: Rename section to Standardizing Names and Labels and add section to standardize categorical labels

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -314,11 +314,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16f47028-71ec-4f00-b5f8-9de8fbd5d9b5",
+   "metadata": {},
+   "source": [
+    "## Standardizing Names and Labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "030b4bf1-d5e2-471e-9303-1afc4bcd2fcf",
    "metadata": {},
    "source": [
-    "## Handling Column Names\n",
-    "Convert all column names to snake_case for consistency, improved readability, and to minimize the risk of errors. "
+    "### Column Names\n",
+    "Convert all column names to snake_case for consistency, improved readability, and to minimize the risk of errors."
    ]
   },
   {
@@ -335,6 +343,41 @@
     "    .str.lower()  # Convert to lowercase\n",
     "    .str.replace(r\"[-/\\s+]\", \"_\", regex=True)  # Replace spaces and special characters with \"_\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27289383-a18b-4e0e-9137-8dac6147f1fa",
+   "metadata": {},
+   "source": [
+    "### Categorical Labels\n",
+    "Convert all categorical labels to snake_case for consistency, improved readability, and to minimize the risk of errors. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c2f49b8-66c6-45a5-ab85-e6c4157692c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def standardize_categorical_labels(categorical_label):\n",
+    "    return (\n",
+    "        categorical_label\n",
+    "        .strip()  # Remove leading/trailing spaces\n",
+    "        .lower()  # Convert to lowercase\n",
+    "        .replace(\"-\", \"_\")  # Replace hyphens with \"_\"\n",
+    "        .replace(\"/\", \"_\")  # Replace slashes with \"_\"\n",
+    "        .replace(\" \", \"_\")  # Replace spaces with \"_\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "# Define categorical columns to standardize labels\n",
+    "columns_to_standardize = [\"categorical_column_1\", \"categorical_column_2\", \"categorical_column_3\"]\n",
+    "\n",
+    "# Apply standardization of categorical labels\n",
+    "for column in columns_to_standardize:\n",
+    "    df[column] = df[column].apply(standardize_categorical_labels)"
    ]
   },
   {
