In machine_learning_template.ipynb > Data Preprocessing section: Place Train-Validation-Test Split section after Handling Data Types section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -559,6 +559,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7dc58fb-44ed-46a4-b7aa-aa74f4d23d1f",
+   "metadata": {},
+   "source": [
+    "## Train-Validation-Test Split  \n",
+    "The ideal split depends on the dataset size and the task. A general guideline is:\n",
+    "\n",
+    "| Dataset Size                | Training Set | Validation Set | Test Set |\n",
+    "|:-----------------------------|--------------|----------------|----------|\n",
+    "| Smaller datasets (<10,000)   | 70%          | 15%            | 15%      |\n",
+    "| Larger datasets (≥10,000)    | 80%          | 10%            | 10%      | "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c905a81-4c0d-4acf-85cd-04f81059d2fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into X features and y target\n",
+    "X = df.drop(\"target\", axis=1)\n",
+    "y = df[\"target\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99b7fc1d-be3a-4623-9e16-aac8e85d3a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into training and temporary sets (70% train, 30% temporary)\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Split the temporary data into validation and test sets (50% each)\n",
+    "# Note: This accomplishes a 70% training, 15% validation and 15% test set size\n",
+    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# Delete the temporary data to free up memory\n",
+    "del X_temp, y_temp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "47ff6c41-2244-462e-968a-9e8473a89ed6",
    "metadata": {},
    "source": [
@@ -1749,50 +1793,6 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
-   "metadata": {},
-   "source": [
-    "# Train-Validation-Test Split  \n",
-    "The ideal split depends on the dataset size and the task. A general guideline is:\n",
-    "\n",
-    "| Dataset Size                | Training Set | Validation Set | Test Set |\n",
-    "|:-----------------------------|--------------|----------------|----------|\n",
-    "| Smaller datasets (<10,000)   | 70%          | 15%            | 15%      |\n",
-    "| Larger datasets (≥10,000)    | 80%          | 10%            | 10%      | "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c905a81-4c0d-4acf-85cd-04f81059d2fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split the data into X features and y target\n",
-    "X = df.drop(\"target\", axis=1)\n",
-    "y = df[\"target\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99b7fc1d-be3a-4623-9e16-aac8e85d3a34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split the data into training and temporary sets (70% train, 30% temporary)\n",
-    "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-    "\n",
-    "# Split the temporary data into validation and test sets (50% each)\n",
-    "# Note: This accomplishes a 70% training, 15% validation and 15% test set size\n",
-    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
-    "\n",
-    "# Delete the temporary data to free up memory\n",
-    "del X_temp, y_temp"
    ]
   },
   {
