--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -325,7 +325,7 @@
    "id": "030b4bf1-d5e2-471e-9303-1afc4bcd2fcf",
    "metadata": {},
    "source": [
-    "### Column Names\n",
+    "**Column Names**  \n",
     "Convert all column names to snake_case for consistency, improved readability, and to minimize the risk of errors."
    ]
   },
@@ -350,7 +350,7 @@
    "id": "27289383-a18b-4e0e-9137-8dac6147f1fa",
    "metadata": {},
    "source": [
-    "### Categorical Labels\n",
+    "**Categorical Labels**  \n",
     "Convert all categorical labels to snake_case for consistency, improved readability, and to minimize the risk of errors. "
    ]
   },
