In machine_learning_template.ipynb > Data Preprocessing > Feature Extraction section: Rename section Engineering New Features and add subsection From Raw Text and another subsection From Categorical Text

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -606,7 +606,16 @@
    "id": "47ff6c41-2244-462e-968a-9e8473a89ed6",
    "metadata": {},
    "source": [
-    "## Feature Extraction"
+    "## Engineering New Features "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "285a8b2b-ba41-4074-812a-045f4a05ecab",
+   "metadata": {},
+   "source": [
+    "### From Raw Text\n",
+    "Derive a categorical, numerical, or boolean feature from a raw text column, which contains unstructured text data stored as strings."
    ]
   },
   {
@@ -614,8 +623,8 @@
    "id": "e1c9931c-d4f6-4255-a894-2be60a02c26e",
    "metadata": {},
    "source": [
-    "### Categorical from String  \n",
-    "Extract a categorical feature from a string column."
+    "**Categorical Feature**  \n",
+    "Extract a categorical feature from a raw text column."
    ]
   },
   {
@@ -653,8 +662,8 @@
    "id": "48f9089b-a2fd-4305-aa23-086332d45c01",
    "metadata": {},
    "source": [
-    "### Numerical from String  \n",
-    "Extract a numerical feature from a string column."
+    "**Numerical Feature**    \n",
+    "Extract a numerical feature from a raw text column."
    ]
   },
   {
@@ -687,8 +696,8 @@
    "id": "beba6942-83b2-4bd4-9223-94bfc963beef",
    "metadata": {},
    "source": [
-    "### Boolean from String  \n",
-    "Extract a boolean feature from a string column."
+    "**Boolean Feature**    \n",
+    "Extract a boolean feature from a raw text column."
    ]
   },
   {
@@ -706,6 +715,15 @@
     "\n",
     "# Show frequencies of boolean feature\n",
     "print(df[\"boolean_feature\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10a7e6a1-82f2-4d28-9370-289ebd6eb7b8",
+   "metadata": {},
+   "source": [
+    "### From Categorical Text\n",
+    "Derive a new feature from a categorical text column, which contains a predefined set of unique categories respresented as strings."
    ]
   },
   {
