In machine_learning_template.ipynb > Data Preprocessing > Engineering New Features > From Categorical Text section: Add target encoding

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -728,6 +728,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8fdb54ce-f8dc-4103-97f4-451b3c238ef2",
+   "metadata": {},
+   "source": [
+    "**Target Encoding**  \n",
+    "Derive numerical feature from categorical text column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27c78b63-8b23-49d5-91aa-e556ceca0de0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge X_train and y_train\n",
+    "df_train = pd.concat([X_train, y_train], axis=1)\n",
+    "\n",
+    "# Calculate the mean of the target variable by category based on the training data\n",
+    "mean_target_by_category = df_train.groupby(\"str_column\")[\"target_variable\"].mean()\n",
+    "\n",
+    "# Create numerical feature in training, validation, and test data by replacing the string categories with their corresponding mean target values\n",
+    "X_train[\"numerical_feature\"] = X_train[\"str_column\"].map(mean_target_by_category)\n",
+    "X_val[\"numerical_feature\"] = X_val[\"str_column\"].map(mean_target_by_category)\n",
+    "X_test[\"numerical_feature\"] = X_test[\"str_column\"].map(mean_target_by_category)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "416056c2-ce84-4a88-902e-42ac63b4b96b",
    "metadata": {},
    "source": [
