In machine_learning_template.ipynb > Data Preprocessing > Engineering New Features > From Categorical Text section: Use global mean for unseen categories in target encoding

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -745,13 +745,14 @@
     "# Merge X_train and y_train\n",
     "df_train = pd.concat([X_train, y_train], axis=1)\n",
     "\n",
-    "# Calculate the mean of the target variable by category based on the training data\n",
+    "# Calculate mean target by category and global mean based on the training data\n",
     "mean_target_by_category = df_train.groupby(\"str_column\")[\"target_variable\"].mean()\n",
+    "mean_target = df_train[\"target_variable\"].mean()\n",
     "\n",
-    "# Create numerical feature in training, validation, and test data by replacing the string categories with their corresponding mean target values\n",
-    "X_train[\"numerical_feature\"] = X_train[\"str_column\"].map(mean_target_by_category)\n",
-    "X_val[\"numerical_feature\"] = X_val[\"str_column\"].map(mean_target_by_category)\n",
-    "X_test[\"numerical_feature\"] = X_test[\"str_column\"].map(mean_target_by_category)"
+    "# Replace string categories with corresponding mean target in training, validation, and test data (use global mean for unseen categories) \n",
+    "X_train[\"numerical_feature\"] = X_train[\"str_column\"].map(mean_target_by_category).fillna(mean_target)\n",
+    "X_val[\"numerical_feature\"] = X_val[\"str_column\"].map(mean_target_by_category).fillna(mean_target)\n",
+    "X_test[\"numerical_feature\"] = X_test[\"str_column\"].map(mean_target_by_category).fillna(mean_target)"
    ]
   },
   {
