In machine_learning_template.ipynb > Data Preprocessing > Engineering New Features > From Categorical Text section: Update markdown documentation comment for target encoding

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -732,7 +732,7 @@
    "metadata": {},
    "source": [
     "**Target Encoding**  \n",
-    "Derive numerical feature from categorical text column."
+    "Derive numerical feature from categorical text column by encoding categories based on the mean of the target variable. This method is especially useful for categorical columns with high cardinality (i.e., a large number of unique categories)."
    ]
   },
   {
