In machine_learning_template.ipynb > Data Preprocessing > Engineering New Features > From Categorical Text section: Add tiering

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -757,6 +757,56 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f07075cb-2601-4e9f-b1af-eb76d0c7c650",
+   "metadata": {},
+   "source": [
+    "**Tiering**  \n",
+    "Group categories into predefined tiers based on domain-specific factors that are relevant for predicting the target variable, using subject matter expertise. This method is useful for improving predictive performance and handling categorical columns with high cardinality (i.e., a large number of unique categories).\n",
+    "\n",
+    "Example: Categorize 300+ cities into 3 tiers based on factors such as employment opportunities, cost of living, and population density."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de4766ac-ead3-46c9-897d-3338bfca2057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def derive_tier(category):\n",
+    "    tier_1 = [\n",
+    "        \"category_1\", \"category_2\", \"category_3\", \"category_4\", \"category_5\", \n",
+    "        \"category_6\", \"category_7\", \"category_8\", \"category_9\", \"category_10\"\n",
+    "    ]\n",
+    "    \n",
+    "    tier_2 = [\n",
+    "        \"category_11\", \"category_12\", \"category_13\", \"category_14\", \"category_15\", \n",
+    "        \"category_16\", \"category_17\", \"category_18\", \"category_19\", \"category_20\"\n",
+    "    ]\n",
+    "\n",
+    "    tier_3 = [\n",
+    "        \"category_21\", \"category_22\", \"category_23\", \"category_24\", \"category_25\", \n",
+    "        \"category_26\", \"category_27\", \"category_28\", \"category_29\", \"category_30\"\n",
+    "    ]\n",
+    "    \n",
+    "    if category in tier_1:\n",
+    "        return \"tier_1\"\n",
+    "    elif category in tier_2:\n",
+    "        return \"tier_2\"\n",
+    "    elif category in tier_3:\n",
+    "        return \"tier_3\"\n",
+    "    else:\n",
+    "        return \"tier_2\"  # Default to tier_2 for unseen categories\n",
+    "\n",
+    "\n",
+    "# Apply function to create tier feature in training, validation, and test data\n",
+    "X_train[\"tier\"] = X_train[\"str_column\"].apply(derive_tier)\n",
+    "X_val[\"tier\"] = X_val[\"str_column\"].apply(derive_tier)\n",
+    "X_test[\"tier\"] = X_test[\"str_column\"].apply(derive_tier)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "416056c2-ce84-4a88-902e-42ac63b4b96b",
    "metadata": {},
    "source": [
