In machine_learning_template.ipynb > Data Preprocessing > Engineering New Features > From Categorical Text section: Use dictionary mapping instead of lists with if-else for tiering

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -769,37 +769,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de4766ac-ead3-46c9-897d-3338bfca2057",
+   "id": "82a3581c-7b0b-4a70-ac27-db1b41c3eb05",
    "metadata": {},
    "outputs": [],
    "source": [
     "def derive_tier(category):\n",
-    "    tier_1 = [\n",
-    "        \"category_1\", \"category_2\", \"category_3\", \"category_4\", \"category_5\", \n",
-    "        \"category_6\", \"category_7\", \"category_8\", \"category_9\", \"category_10\"\n",
-    "    ]\n",
-    "    \n",
-    "    tier_2 = [\n",
-    "        \"category_11\", \"category_12\", \"category_13\", \"category_14\", \"category_15\", \n",
-    "        \"category_16\", \"category_17\", \"category_18\", \"category_19\", \"category_20\"\n",
-    "    ]\n",
+    "    # Define a dictionary mapping categories to their respective tiers\n",
+    "    tier_map = {\n",
+    "        \"category_1\": \"tier_1\", \"category_2\": \"tier_1\", \"category_3\": \"tier_1\", \n",
+    "        \"category_4\": \"tier_1\", \"category_5\": \"tier_1\", \"category_6\": \"tier_1\", \n",
+    "        \"category_7\": \"tier_1\", \"category_8\": \"tier_1\", \"category_9\": \"tier_1\", \n",
+    "        \"category_10\": \"tier_1\",\n",
+    "        \n",
+    "        \"category_11\": \"tier_2\", \"category_12\": \"tier_2\", \"category_13\": \"tier_2\",\n",
+    "        \"category_14\": \"tier_2\", \"category_15\": \"tier_2\", \"category_16\": \"tier_2\",\n",
+    "        \"category_17\": \"tier_2\", \"category_18\": \"tier_2\", \"category_19\": \"tier_2\",\n",
+    "        \"category_20\": \"tier_2\",\n",
+    "        \n",
+    "        \"category_21\": \"tier_3\", \"category_22\": \"tier_3\", \"category_23\": \"tier_3\",\n",
+    "        \"category_24\": \"tier_3\", \"category_25\": \"tier_3\", \"category_26\": \"tier_3\",\n",
+    "        \"category_27\": \"tier_3\", \"category_28\": \"tier_3\", \"category_29\": \"tier_3\",\n",
+    "        \"category_30\": \"tier_3\"\n",
+    "        # Add more categories as needed...\n",
+    "    }\n",
     "\n",
-    "    tier_3 = [\n",
-    "        \"category_21\", \"category_22\", \"category_23\", \"category_24\", \"category_25\", \n",
-    "        \"category_26\", \"category_27\", \"category_28\", \"category_29\", \"category_30\"\n",
-    "    ]\n",
-    "    \n",
-    "    if category in tier_1:\n",
-    "        return \"tier_1\"\n",
-    "    elif category in tier_2:\n",
-    "        return \"tier_2\"\n",
-    "    elif category in tier_3:\n",
-    "        return \"tier_3\"\n",
-    "    else:\n",
-    "        return \"tier_2\"  # Default to tier_2 for unseen categories\n",
+    "    # Return the tier based on the category (default to \"tier_2\" for unknown categories)\n",
+    "    return tier_map.get(category, \"tier_2\")\n",
     "\n",
-    "\n",
-    "# Apply function to create tier feature in training, validation, and test data\n",
+    "# Apply the function to create the tier feature in training, validation, and test data\n",
     "X_train[\"tier\"] = X_train[\"str_column\"].apply(derive_tier)\n",
     "X_val[\"tier\"] = X_val[\"str_column\"].apply(derive_tier)\n",
     "X_test[\"tier\"] = X_test[\"str_column\"].apply(derive_tier)"
