In machine_learning_template.ipynb > Data Preprocessing > Defining Semantic Type section: Remove subheaders for manual and programmatic

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -816,7 +816,7 @@
    "id": "6266e9b3-4b24-41e6-bd6d-b883f051ab6d",
    "metadata": {},
    "source": [
-    "### Manual  \n",
+    "**Manual**    \n",
     "Option 1: Define semantic column types manually for small datasets or when you have specific requirements and need precise control."
    ]
   },
@@ -849,7 +849,7 @@
    "id": "52666e48-c4da-4f3d-ae3d-46329239f669",
    "metadata": {},
    "source": [
-    "### Programmatic  \n",
+    "**Programmatic**    \n",
     "Option 2: Define semantic column types programmatically for large datasets or when you need to automate the process, ensuring efficiency and scalability."
    ]
   },
