In machine_learning_template.ipynb > Data Preprocessing > Handling Missing Values section: Remove subheaders

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -879,7 +879,7 @@
    "id": "a2379de8-3825-4f42-83c7-c2365289c059",
    "metadata": {},
    "source": [
-    "#### Identification"
+    "**Identification**"
    ]
   },
   {
@@ -898,7 +898,7 @@
    "id": "83b7806d-1465-4747-8780-b2e28d51a468",
    "metadata": {},
    "source": [
-    "### Imputation"
+    "**Imputation**"
    ]
   },
   {
@@ -906,7 +906,7 @@
    "id": "6c0c06ef-bbbf-4d18-bde4-e7a50fc1a1a3",
    "metadata": {},
    "source": [
-    "Imputate missing values in a numerical column using the median. "
+    "Impute missing values in a numerical column using the median. "
    ]
   },
   {
@@ -937,7 +937,7 @@
    "id": "8018d4b9-c440-4b15-aafb-a4bb3a3e79fa",
    "metadata": {},
    "source": [
-    "Imputate missing values in a categorical column using the mode (most frequent value)."
+    "Impute missing values in a categorical column using the mode (most frequent value)."
    ]
   },
   {
@@ -968,7 +968,7 @@
    "id": "ed9519b6-a492-4308-abc0-89a470543652",
    "metadata": {},
    "source": [
-    "### Deletion\n",
+    "**Deletion**  \n",
     "Delete rows with missing values on any column or a subset of columns."
    ]
   },
