In machine_learning_template.ipynb > Data Preprocessing > Handling Missing Values section: Use X_train, X_val, and X_test instead of df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -885,12 +885,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f98f545d-2870-472b-a8a6-fdeebbe6e3a6",
+   "id": "4b5bb454-d9c9-4b6e-8203-a4eaf0418e46",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Identify missing values\n",
-    "df.isnull().sum()"
+    "print(\"Training Data - Features:\")\n",
+    "print(X_train.isnull().sum())\n",
+    "print(\"\\nTraining Data - Target Variable:\")\n",
+    "print(y_train.isnull().sum())\n",
+    "\n",
+    "print(\"\\nValidation Data - Features:\")\n",
+    "print(X_val.isnull().sum())\n",
+    "print(\"\\nValidation Data - Target Variable:\")\n",
+    "print(y_val.isnull().sum())\n",
+    "\n",
+    "print(\"\\nTest Data - Features:\")\n",
+    "print(X_test.isnull().sum())\n",
+    "print(\"\\nTest Data - Target Variable:\")\n",
+    "print(y_test.isnull().sum())"
    ]
   },
   {
@@ -917,7 +930,7 @@
    "outputs": [],
    "source": [
     "# Descriptive statistics of numerical column\n",
-    "df[\"numerical_column\"].describe()"
+    "X_train[\"numerical_column\"].describe()"
    ]
   },
   {
@@ -927,9 +940,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Impute missing values with the median\n",
-    "median = df[\"numerical_column\"].median()\n",
-    "df[\"numerical_column\"] = df[\"numerical_column\"].fillna(median)"
+    "# Calculate median from training data\n",
+    "median = X_train[\"numerical_column\"].median()\n",
+    "\n",
+    "# Impute median in training, validation, and test data\n",
+    "X_train[\"numerical_column\"] = X_train[\"numerical_column\"].fillna(median)\n",
+    "X_val[\"numerical_column\"] = X_val[\"numerical_column\"].fillna(median)\n",
+    "X_test[\"numerical_column\"] = X_test[\"numerical_column\"].fillna(median)"
    ]
   },
   {
@@ -948,19 +965,23 @@
    "outputs": [],
    "source": [
     "# Frequencies of categorical column\n",
-    "df[\"categorical_column\"].value_counts()"
+    "X_train[\"categorical_column\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c36266f3-6460-48cf-83af-0c888432655b",
+   "id": "184c624b-2aba-4c16-99a3-b3717a9d1689",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Impute missing values with the mode \n",
-    "mode = df[\"categorical_column\"].mode()[0]\n",
-    "df[\"categorical_column\"] = df[\"categorical_column\"].fillna(mode)"
+    "# Calculate mode from training data\n",
+    "mode = X_train[\"categorical_column\"].mode()[0]\n",
+    "\n",
+    "# Impute mode in training, validation, and test data\n",
+    "X_train[\"categorical_column\"] = X_train[\"categorical_column\"].fillna(mode)\n",
+    "X_val[\"categorical_column\"] = X_val[\"categorical_column\"].fillna(mode)\n",
+    "X_test[\"categorical_column\"] = X_test[\"categorical_column\"].fillna(mode)"
    ]
   },
   {
@@ -980,7 +1001,9 @@
    "outputs": [],
    "source": [
     "# Delete rows where any column has a missing value \n",
-    "df.dropna(inplace=True)"
+    "X_train.dropna(inplace=True)\n",
+    "X_val.dropna(inplace=True)\n",
+    "X_test.dropna(inplace=True)"
    ]
   },
   {
@@ -991,7 +1014,9 @@
    "outputs": [],
    "source": [
     "# Delete rows where either column_1 or column_2 has a missing value \n",
-    "df.dropna(subset=[\"column_1\", \"column_2\"], how=\"any\", inplace=True)"
+    "X_train.dropna(subset=[\"column_1\", \"column_2\"], how=\"any\", inplace=True)\n",
+    "X_val.dropna(subset=[\"column_1\", \"column_2\"], how=\"any\", inplace=True)\n",
+    "X_test.dropna(subset=[\"column_1\", \"column_2\"], how=\"any\", inplace=True)"
    ]
   },
   {
